--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "dorawi",
+  "name": "dorawi-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node server/index.js",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "nodemon server/index.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
@@ -17,17 +15,9 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.13.2",
-    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
     "framer-motion": "^11.5.4",
-    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.439.0",
-    "mongoose": "^9.0.1",
-    "multer": "^2.0.2",
-    "pdf-parse": "^2.4.5",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,10 +28,6 @@
     "vite": "^5.4.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -51,7 +37,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.25",
     "globals": "^16.5.0",
-    "nodemon": "^3.1.11",
     "typescript-eslint": "^8.50.0"
   }
 }
